--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "swagger-ui-express": "^4.1.6",
     "tracer": "^1.1.4",
     "winston": "^3.3.3",
-    "yamljs": "^0.3.0"
+    "yamljs": "^0.3.0",
+    "mongoose-paginate": "^5.0.3"
   },
   "repository": {},
   "devDependencies": {},
