--- a/package.json
+++ b/package.json
@@ -27,15 +27,18 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "mongoose": "^5.11.8",
+    "mongoose-paginate": "^5.0.3",
     "node-cron": "^2.0.3",
+    "nodemailer": "^6.7.3",
     "nodemon": "^2.0.6",
     "pm2": "^5.1.0",
     "standard": "^16.0.3",
     "swagger-ui-express": "^4.1.6",
     "tracer": "^1.1.4",
+    "uuid": "^8.3.2",
+    "uuidv4": "^6.2.13",
     "winston": "^3.3.3",
-    "yamljs": "^0.3.0",
-    "mongoose-paginate": "^5.0.3"
+    "yamljs": "^0.3.0"
   },
   "repository": {},
   "devDependencies": {},
